force-app/main/default/objects/QTB_Billing_Account_Oracle__e/QTB_Billing_Account_Oracle__e.object-meta.xml
<CustomObject>
    <description>#SFCPQBLG-45 - Billing Account Oracle Event</description>
    <label>Billing Account Oracle Event</label>
    <pluralLabel>Billing Account Oracle Event</pluralLabel>
</CustomObject>