force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Account_SFDC__c.field-meta.xml
<CustomField>
    <fullName>QTB_Account_SFDC__c</fullName>
    <description>#SFCPQBLG-927 to send the Account SFDC ID in oracle platform event</description>
    <label>Account SFDC ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>