force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>QTB_Account_Status__c</fullName>
    <description>#SFCPQBLG-45 - Status of the account</description>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>