force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_bill_to_location__c.field-meta.xml
<CustomField>
    <fullName>QTB_bill_to_location__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>bill-to location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>