force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_BillingAddress1__c.field-meta.xml
<CustomField>
    <fullName>QTB_BillingAddress1__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>BillingAddress1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>