force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_BillingState__c.field-meta.xml
<CustomField>
    <fullName>QTB_BillingState__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>BillingState</label>
    <length>60</length>
    <type>Text</type>
</CustomField>