force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_BillingZip_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_BillingZip_Code__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>BillingZip Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>