force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Contact_Last_Name__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Contact Last Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>