force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Contact_Primary__c.field-meta.xml
<CustomField>
    <fullName>QTB_Contact_Primary__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Primary</label>
    <length>5</length>
    <type>Text</type>
</CustomField>