force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>QTB_Contact_Role__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>