force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>QTB_Customer_Classification__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Customer Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>