force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Customer_Name__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Customer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>