force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Language__c.field-meta.xml
<CustomField>
    <fullName>QTB_Language__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>