force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Name__c</fullName>
    <description>#SFCPQBLG-646 - Billing Account Oracle Event</description>
    <label>Legal Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>