force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Parent_Account__c</fullName>
    <description>#SFCPQBLG-927 To send Parent Account in oracle platform event</description>
    <label>Parent Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>