force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Parent_BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>QTB_Parent_BillingCountry__c</fullName>
    <description>#SFCPQBLG-927 To send Parent Billing Country in oracle platform event</description>
    <label>Parent Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>