force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Parent_BillingZip_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Parent_BillingZip_Code__c</fullName>
    <description>#SFCPQBLG-927 To send Parent Billing Zip Code in oracle platform event</description>
    <label>Parent Billing Zip Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>