force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Parent_IMGA_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Parent_IMGA_Name__c</fullName>
    <description>#SFCPQBLG-927 To send the Parent IMGA Name in oracle platform event</description>
    <label>Parent IMGA Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>