force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Profile_Class__c.field-meta.xml
<CustomField>
    <fullName>QTB_Profile_Class__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Profile Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>