force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Send_Dunning__c.field-meta.xml
<CustomField>
    <fullName>QTB_Send_Dunning__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Send Dunning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>