force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_SITE_USE_CODE__c.field-meta.xml
<CustomField>
    <fullName>QTB_SITE_USE_CODE__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>SITE USE CODE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>