force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Statement_Cycle__c.field-meta.xml
<CustomField>
    <fullName>QTB_Statement_Cycle__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Statement Cycle</label>
    <length>15</length>
    <type>Text</type>
</CustomField>