force-app/main/default/objects/QTB_Billing_Account_Oracle__e/fields/QTB_Tax_Registration__c.field-meta.xml
<CustomField>
    <fullName>QTB_Tax_Registration__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Tax Registration</label>
    <length>250</length>
    <type>Text</type>
</CustomField>